ref: change import roots, fix scrollbar

--- a/src/features/products/components/ListFilter/ListFilter.scss
+++ b/src/features/products/components/ListFilter/ListFilter.scss
@@ -103,7 +103,7 @@
 .filter__label {
   width: 100%;
   position: relative;
-  padding-left: 30px;
+  padding: 1px 0 1px 30px;
   display: flex;
   font-size: 14px;
   line-height: 19px;
